# Data-Augmentation-for-Object-Detection-YOLO-

./: .flake8  .gitignore  BackgroundFileInterface.py  CreateSamples.py  Parameters.config  README.md  SampleImgInterface.py  TrajectoriesTrial.py  pyproject.toml  utility.py
Data/background/original/: ImageData.mat  negatives.txt
data_augmentation_YOLO/: bkg_files_loader.py  config.py  config.yaml  image_transformer.py  main.py  pyproject.toml
data_augmentation_yolo/: config.yaml  image_transformer.py  main.py  util.py
rotate_3d-master/: image_transformer.py  util.py
rotate_3d_master/: image_transformer.py
tests/: conftest.py  test_noise.py
